# datasette-export

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
datasette_export/: __init__.py
tests/: test_export.py
